--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "autoload": {
         "psr-4": {
             "tt\\": "src/"
-        }
+        },
+        "files": [
+            "TT.php"
+        ]
     }
 }
